# Ecosystem-simulation

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake_modules/: FindSFML.cmake
src/: SimplexNoise.cpp  SimplexNoise.h  cell.cpp  cell.hpp  constants.hpp  food.cpp  food.hpp  globals.hpp  main.cpp  program.cpp  program.hpp  utils.cpp  utils.hpp
